Simplified logic in core.views.view_log view and fixed z-index of fixed footer. (#625)

--- a/src/static-assets/css/over-rides.css
+++ b/src/static-assets/css/over-rides.css
@@ -1294,7 +1294,7 @@ body {
     position: fixed;
     width: 100%;
     bottom: 0;
-    z-index: 5;
+    z-index: 999;
 }
 
 p.footer {
